...
              clearLabel={t('addPerson.clearSpouseMarriageDate')}
            />
          </View>
        )}
        <PersonForm
          submitLabel={t('addPerson.saveLabel')}
          submitTestID="btn-save-person"
          onSubmit={handleSave}
        />
      </ScrollView>
      <KeyboardDoneAccessory />
    </View>
  );
...
